--- a/SRC/cajas.html
+++ b/SRC/cajas.html
@@ -12,17 +12,23 @@
         #caja1 {
             background-color: blue;
             margin-bottom: 50px;
-            margin-left: 100px;
+            margin-left: 20px;
+            margin-right: 20px;
+            width: 460px;
         }
         #caja2 {
             background-color: aqua;
             margin-top: 50px;
-            margin-left: 150px;
+            margin-left: 125px;
+            margin-right: 125px;
+            width: 250px;
         }
         #caja3 {
             background-color: black;
             margin-bottom: 50px;
             margin-left: 80px;
+            margin-right: 80px;
+            width: 340px;
         }   
 
         #caja4 {
@@ -43,15 +49,26 @@
             margin-left: 65px;
         }
 
+        #main {
+            background-color: yellowgreen;
+            width: 500px;
+            margin: 100px 50px 100px 50px;
+        }
+
     </style>
+
 </head>
 <body>
+    <div id="main">
+
 <div id="caja1" class="dimensiones"></div>
 <div id="caja2" class="dimensiones"></div>
 <div id="caja3" class="dimensiones"></div>
 <div id="caja4" class="dimensiones"></div>
 <div id="caja5" class="dimensiones"></div>
 <div id="caja6" class="dimensiones"></div>
-    
+
+</div>
+
 </body>
 </html>
