--- a/maquetacion3.html
+++ b/maquetacion3.html
@@ -68,22 +68,23 @@
             width: 250px;
             height: 100px;
             margin-left: 20px;
-            margin-right: 30px;
+            margin-right: 15px;
             margin-top: 15px;
             margin-bottom: 15px;
             padding-left: 50px;
             padding-right: 50px;
+            background-color: blueviolet;
         }
         #imagen1 {
             float: left;
-            width: 150px;
-            height: 50px;
+            width: 250px;
+            height: 100px;
 
         }
         .headerbaner {
             float: left;
             border: solid tomato 2px;
-            width: 600px;
+            width: 400px;
             height: 100px;
             margin-left: 20px;
             margin-right: 20px;
