--- a/maquetacion4.html
+++ b/maquetacion4.html
@@ -13,7 +13,6 @@ height: 900px;
 margin: auto;
 
 
-
 }
 .header {
 
@@ -30,7 +29,7 @@ margin: auto;
 }
 .sidebar {
     float: left;
-    background-color: aqua;
+    background-color: darkcyan;
     width: 30%;
     height: 500px;
     margin-top: 25px;
@@ -107,10 +106,10 @@ text-align: center;
     <div id="main">
 <div class="header"> HEADER</div>
 <div class="sidebar">SIDEBAR</div>
-<div class="content1">content1</div>
-<div class="content2">content2</div>
-<div class="content3">content3</div>
-<div class="footer">footer</div>
+<div class="content1">CONTENT1</div>
+<div class="content2">CONTENT2</div>
+<div class="content3">CONTENT3</div>
+<div class="footer">FOOTER</div>
 
 
 
