--- a/caja.html
+++ b/caja.html
@@ -16,12 +16,51 @@
         border: 1px solid red;
     }
 
-    </style>
-    
-<body>
-    <div class="caja">
+    .caja1 {
 
-    </div>
+        float: left;
+        width: 100px;
+        height: 100px;
+        padding: 10px;
+        border: 1px solid black;
+        margin: 20px;
+    }
+
+    .caja2 {
+
+        float: left;
+        width: 100px;
+        height: 100px;
+        padding: 10px;
+        border: 1px solid black;
+        margin: 20px;
+    }
+
+    .caja3 {
+
+        width: 50%;
+        height: 150px;
+        background-color: green;
+        margin-top: 170px;
+    }
+
+    .caja4 {
+
+        width: 180%;
+        height: 200px;
+        background-color: yellow;
+        border: 2px dashed gray;
+        margin-top: 30px;
+    }
+
+    </style>
+
+<body>
+    <div class="caja"></div>
+    <div class="caja1"></div>
+    <div class="caja2"></div>
+    <div class="caja3"></div>
+    <div class="caja4"></div>
     
 </body>
 </html>
