--- a/SRC/galeria.html
+++ b/SRC/galeria.html
@@ -26,9 +26,14 @@
             
         }
 
-        .texto {
+        #texto {
 
+            display: flex;
+            flex-wrap: wrap;
             text-align: center;
+            flex-basis: 200px;
+            margin: 10px;
+
 
         }
 
@@ -40,7 +45,7 @@
 
       <div>
         <img src="imagenes proyectos/tenis1.jpg" alt="imagen1" class="item">
-        <div class="texto"><h1>Tenis</h1>
+        <div id="texto"><h1>Tenis</h1>
         <p>tenis nueva generacion</p>
      </div>
      <div>
