--- a/animacio.html
+++ b/animacio.html
@@ -21,6 +21,14 @@
             animation-timing-function: linear;
             animation-iteration-count: infinite;
         }
+
+        p {
+            animation-duration: 3s;
+            animation-name: sliden;
+        
+        }
+        @keyframes slidein;
+        
     </style>
 </head>
 <body>
