--- a/ejemplosjava/ejemplosj3.html
+++ b/ejemplosjava/ejemplosj3.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ejemplos java2</title>
+    <title>ejemploos de java3</title>
+   
 </head>
 <body>
-  <script src="segundoscript.js"></script>
+    <script src="terecerscript.js"></script>
 </body>
 </html>
